<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>khan_description</name>
  <version>0.0.2</version>
  <description>KHAN slip/steer URDF description used in ME-2984 SS:Intro into Robotics</description>

  <maintainer email="jpz@vt.edu">Jason Ziglar</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">https://github.com/FleetRobotics/khan_robot</url>

  <author email="csknabe@gmail.com">Coleman Knabe</author>
  <author email="jpz@vt.edu">Jason Ziglar</author>
  <author email="mishra42@gmail.com">John "Semi" Seminatore</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
