<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>khan_launch</name>
  <version>0.0.1</version>
  <description>Launch files for Khan</description>

  <maintainer email="jpz@vt.edu">Jason Ziglar</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">https://github.com/FleetRobotics/khan_robot</url>

  <author email="csknabe@gmail.com">Coleman Knabe</author>
  <author email="jpz@vt.edu">Jason Ziglar</author>
  <author email="mishra42@gmail.com">John "Semi" Seminatore</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>khan_description</run_depend>
  <exec_depend>rviz</run_depend>
  <exec_depend>gazebo_ros</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
